# regular-birds

./: README.md  pyproject.toml  requirements.txt
src/regular_birds/eda/: usbp.ipynb
